# lightning-node-viewer

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: app.py  config.py  database.py
src/database/: connector.py
src/tabs/: node_info_tab.py  time_series_tab.py
src/utils/: chart_helpers.py
