[tool.poetry]
name = "lightning-node-viewer"
version = "0.1.0"
description = ""
authors = ["kazuW <35624002+kazuW@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "lightning_node_viewer"}]

[tool.poetry.dependencies]
python = "3.11.3"
gradio = "4.44.1"
matplotlib = "3.10.0"
pandas = "^2.2.3"
plotly = "^6.0.0"
pyinstaller = "^6.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
